--- a/content/2019-04-18.md
+++ b/content/2019-04-18.md
@@ -3,7 +3,7 @@ Date: 2019-04-18
 
 We have recorded our introductory podcast which we plan to publish through all the usual channels (iTunes, Google Play, etc.) within the next couple of weeks.
 
-In the meantime [here is a sneak preview of the first datanomads.dev podcast](https://s3-us-west-2.amazonaws.com/datanomads.dev/DataNomads-0000.mp3 "Data Nomads Session 0").
+In the meantime, [here is a sneak preview of the first Data Nomads podcast](https://s3-us-west-2.amazonaws.com/datanomads.dev/DataNomads-0000.mp3 "Data Nomads Session 0").
 
 Send us an email at [podcast@datanomads.dev](mailto:podcast@datanomads.dev) if you would like to connect with us and/or subscribe to the ongoing podcast once it is released.
 
